crates/swc/tests/tsc-references/classExtendsItselfIndirectly2_es5.1.normal.js
import _class_call_check from "@swc/helpers/src/_class_call_check.mjs";
import _inherits from "@swc/helpers/src/_inherits.mjs";
import _create_super from "@swc/helpers/src/_create_super.mjs";
var C = /*#__PURE__*/ function(_E) {
    "use strict";
    _inherits(C, _E);
    var _super = _create_super(C);
    function C() {
        _class_call_check(this, C);
        return _super.apply(this, arguments);
    }
    return C;
} // error
(N.E);
var M;
(function(M) {
    var D = /*#__PURE__*/ function(C) {
        "use strict";
        _inherits(D, C);
        var _super = _create_super(D);
        function D() {
            _class_call_check(this, D);
            return _super.apply(this, arguments);
        }
        return D;
    }(C);
    M.D = D;
})(M || (M = {}));
var N;
(function(N) {
    var E = /*#__PURE__*/ function(_D) {
        "use strict";
        _inherits(E, _D);
        var _super = _create_super(E);
        function E() {
            _class_call_check(this, E);
            return _super.apply(this, arguments);
        }
        return E;
    }(M.D);
    N.E = E;
})(N || (N = {}));
var O;
(function(O) {
    var C2 = /*#__PURE__*/ function(_E2) {
        "use strict";
        _inherits(C2, _E2);
        var _super = _create_super(C2);
        function C2() {
            _class_call_check(this, C2);
            return _super.apply(this, arguments);
        }
        return C2;
    } // error
    (Q.E2);
    var P;
    (function(P) {
        var D2 = /*#__PURE__*/ function(C2) {
            "use strict";
            _inherits(D2, C2);
            var _super = _create_super(D2);
            function D2() {
                _class_call_check(this, D2);
                return _super.apply(this, arguments);
            }
            return D2;
        }(C2);
        P.D2 = D2;
    })(P || (P = {}));
    var Q;
    (function(Q) {
        var E2 = /*#__PURE__*/ function(_D2) {
            "use strict";
            _inherits(E2, _D2);
            var _super = _create_super(E2);
            function E2() {
                _class_call_check(this, E2);
                return _super.apply(this, arguments);
            }
            return E2;
        }(P.D2);
        Q.E2 = E2;
    })(Q || (Q = {}));
})(O || (O = {}));
